--- a/src/catagories.html
+++ b/src/catagories.html
@@ -7,7 +7,7 @@
     <title>Categories</title>
   </head>
 
-  <body>
+  <body class="bg-gray-900 text-amber-100">
     <!--Navbar Code-->
 
     <div class="flex flex-col justify-items-start mt-[10%] w-[100%]">
@@ -194,5 +194,6 @@
         </div>
       </div>
     </div>
+    <!--footer End here-->
   </body>
 </html>
