commit on may day

--- a/src/catagories.html
+++ b/src/catagories.html
@@ -25,63 +25,63 @@
       class="grid grid-cols-6 grid-rows-auto gap-x-2 gap-y-8 ml-[7%] mt-[2%] mr-[7%]"
     >
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
@@ -103,63 +103,63 @@
       class="grid grid-cols-6 grid-rows-auto gap-x-2 gap-y-8 ml-[7%] mt-[2%] mr-[7%]"
     >
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
       </div>
 
       <div
-        class="flex flex-col w-30 p-4 bg-amber-200 rounded justify-center items-center"
+        class="flex flex-col w-30 p-4 bg-gray-800 rounded justify-center items-center"
       >
         <img src="/assets/images/image.png" class="h-10.5 w-10.5" />
         <h3 class="mt-1.5">Hi</h3>
