--- a/src/loan.html
+++ b/src/loan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
-    <title>Donation</title>
+    <title>Loans</title>
   </head>
   <body class="bg-gray-900 text-amber-100">
     <!--Navbar Start-->
@@ -14,7 +14,7 @@
     <div class="flex flex-col justify-items-start mt-[10%] w-[100%]">
       <div class="flex flex-col justify-center ml-[7%]">
         <div class="flex align-middle text-4xl font-bold">
-          Find Fundraisers that need your help
+          Give Loans that Benifit Everybody
         </div>
       </div>
     </div>
@@ -77,83 +77,8 @@
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
         </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
-        </div>
       </div>
       <!--Card End-->
-
-      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
-        <div class="">
-          <img
-            src="/assets/images/donation1.png"
-            class="h-max[60] w-max[60] rounded-2xl"
-          />
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Winter Clothes Distribution
-        </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
-        </div>
-      </div>
-      <!--Card End-->
-
-      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
-        <div class="">
-          <img
-            src="/assets/images/donation1.png"
-            class="h-max[60] w-max[60] rounded-2xl"
-          />
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Winter Clothes Distribution
-        </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
-        </div>
-      </div>
-      <!--Card End-->
-
-      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
-        <div class="">
-          <img
-            src="/assets/images/donation1.png"
-            class="h-max[60] w-max[60] rounded-2xl"
-          />
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Winter Clothes Distribution
-        </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
-        </div>
-      </div>
-      <!--Card End-->
-
       <!--card start-->
       <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
         <div class="">
@@ -165,14 +90,6 @@
 
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
-        </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
         </div>
       </div>
       <!--Card End-->
@@ -188,13 +105,19 @@
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
         </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+      </div>
+      <!--Card End-->
+      <!--card start-->
+      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
+        <div class="">
+          <img
+            src="/assets/images/donation1.png"
+            class="h-max[60] w-max[60] rounded-2xl"
+          />
         </div>
 
         <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
+          Winter Clothes Distribution
         </div>
       </div>
       <!--Card End-->
@@ -210,13 +133,19 @@
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
         </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+      </div>
+      <!--Card End-->
+      <!--card start-->
+      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
+        <div class="">
+          <img
+            src="/assets/images/donation1.png"
+            class="h-max[60] w-max[60] rounded-2xl"
+          />
         </div>
 
         <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
+          Winter Clothes Distribution
         </div>
       </div>
       <!--Card End-->
@@ -232,21 +161,13 @@
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
         </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
-
-        <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
-        </div>
       </div>
       <!--Card End-->
       <!--card start-->
       <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
         <div class="">
           <img
-            src="/assets/images/donation2.png"
+            src="/assets/images/donation1.png"
             class="h-max[60] w-max[60] rounded-2xl"
           />
         </div>
@@ -254,13 +175,19 @@
         <div class="flex align-middle text font-light">
           Winter Clothes Distribution
         </div>
-
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+      </div>
+      <!--Card End-->
+      <!--card start-->
+      <div class="h-max[100] w-75 flex flex-col gap-3 items-center">
+        <div class="">
+          <img
+            src="/assets/images/donation1.png"
+            class="h-max[60] w-max[60] rounded-2xl"
+          />
         </div>
 
         <div class="flex align-middle text font-light">
-          Tk. 25000 out of Tk. 50000 Raised
+          Winter Clothes Distribution
         </div>
       </div>
       <!--Card End-->
