--- a/src/donation-description.html
+++ b/src/donation-description.html
@@ -57,26 +57,29 @@
         </div>
       </div>
       <!--Right Panel -->
-      <div class="flex justify-center gap-25">
-        <div class="flex flex-col justify-normal gap-y-5 mt-[25%]">
-          <div class="flex justify-center text-justify text-3xl text-amber-200">
-            TK. 25000 Raised
-          </div>
-          <div class="flex justify-between gap-6">
-            <div>Tk.50000 Goal</div>
-            <div>360 Donations</div>
-          </div>
-          <div>
-            <div class="flex flex-col gap-4">
-              <button class="bg-black pt-2 pb-2 rounded-full text-xl">
-                Share
-              </button>
-              <button class="bg-black pt-2 pb-2 rounded-full text-xl">
-                Donate
-              </button>
+      <div>
+        <div class="flex justify-center gap-5">
+          <div class="flex flex-col justify-normal gap-y-5 mt-[25%]">
+            <div
+              class="flex justify-center text-justify text-2xl text-amber-200"
+            >
+              TK. 25000 Raised
+            </div>
+            <div class="flex justify-between gap-6">
+              <div>Tk.50000 Goal</div>
+              <div>360 Donations</div>
+            </div>
+            <div>
+              <div class="flex flex-col gap-4">
+                <button class="bg-black pt-2 pb-2 rounded-full text-xl">
+                  Share
+                </button>
+                <button class="bg-black pt-2 pb-2 rounded-full text-xl">
+                  Donate
+                </button>
+              </div>
             </div>
           </div>
-        </div>
 
           <!-- Circular Progress -->
           <div class="mt-[25%]">
@@ -114,15 +117,92 @@
                 class="absolute top-1/2 start-1/2 transform -translate-y-1/2 -translate-x-1/2"
               >
                 <span
-                  class="text-center text-2xl font-bold text-blue-600 dark:text-blue-500"
-                  >35%</span
+                  class="text-center text-2xl flex align-middle font-bold text-blue-600 dark:text-blue-500"
+                  >35%<br class="text-center" />Done</span
                 >
               </div>
             </div>
           </div>
           <!-- End Circular Progress -->
         </div>
+
+        <div
+          class="flex flex-col justify-center items-center gap-y-8 mt-[25%] p-2 pt-4 pb-4 bg-amber-700"
+        >
+          <div class="flex justify-center">
+            <div class="flex align-middle justify-center gap-4">
+              <img
+                src="/assets/images/image.png"
+                class="max-h-[40px] max-w-[40px] mt-[4px]"
+              />
+              <div class="flex flex-col items-center">
+                <div>TOP DONATION</div>
+                <div>By Rafi Ahmed - Tk.5000</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex justify-center">
+            <div class="flex align-middle justify-center gap-4">
+              <img
+                src="/assets/images/image.png"
+                class="max-h-[40px] max-w-[40px] mt-[4px]"
+              />
+              <div class="flex flex-col items-center">
+                <div>TOP DONATION</div>
+                <div>By Rafi Ahmed - Tk.5000</div>
+              </div>
+            </div>
+          </div>
+          <div class="flex justify-center">
+            <div class="flex align-middle justify-center gap-4">
+              <img
+                src="/assets/images/image.png"
+                class="max-h-[40px] max-w-[40px] mt-[4px]"
+              />
+              <div class="flex flex-col items-center">
+                <div>TOP DONATION</div>
+                <div>By Rafi Ahmed - Tk.5000</div>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col gap-4">
+            <button class="bg-black pt-3 pb-3 pl-8 pr-8 rounded-full text-xl">
+              See All Donations
+            </button>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!--Footer Code-->
+    <div class="flex justify-around mt-20 mb-10">
+      <div class="flex-col justify-between">
+        <div class="font-light">
+          For More information or Inquiry Contact us at
+        </div>
+        <div class="font-light">uiuloananddonation@gmail.com</div>
+      </div>
+
+      <div class="flex justify-around items-center gap-5">
+        <div class="font-light">Terms and Condition</div>
+        <div class="font-light">Cookie Policy</div>
+        <div class="font-medium">Legal</div>
+
+        <div
+          class="bg-amber-500 h-10 p-4 rounded-3xl flex flex-col justify-center"
+        >
+          <button class="flex justify-evenly gap-2">
+            <div class="flex justify-center gap-1">
+              <img src="/assets/images/tick.png" class="h-5 w-5" />
+              English
+            </div>
+            <div>|</div>
+            <div>United States</div>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!--footer End here-->
   </body>
 </html>
