--- a/src/checkout.html
+++ b/src/checkout.html
@@ -11,10 +11,10 @@
       <div class="text-5xl ml-[5%] mb-[1rem]">Your Basket</div>
       <div class="pt-[2px] bg-black ml-[5%] mr-[3%] mb-[1rem]"></div>
       <!--Card Start-->
-      <div class="flex justify-start mb-[1rem]">
+      <div class="flex justify-start mb-[1rem] p-4 ml-[5%] mr-[3%] gap-x-10">
         <img
-          src="/assets/images/rafivai.png"
-          class="max-h-[280px] max-w-[280px]"
+          src="/assets/images/arnob.jpg"
+          class="max-h-[180px] max-w-[280px]"
         />
         <div class="flex flex-col gap-[10px] justify-center">
           <div class="text-3xl w-[18em]">I need 3K loan for my Keyboard</div>
@@ -108,5 +108,57 @@
         </div>
       </div>
     </div>
+    <div>
+      <div class="pt-[3px] bg-black ml-[5%] mr-[3%] mb-[1rem]"></div>
+      <div class="flex justify-end gap-4 mr-[4rem]">
+        <div class="text-2xl">Total Amount:</div>
+        <div class="text-2xl">50000</div>
+      </div>
+      <div class="pt-[3px] bg-black ml-[5%] mr-[3%] mb-[1rem] mt-[1rem]"></div>
+      <div class="flex justify-end mr-[5rem]">
+        <button class="pt-3 pb-3 pl-5 pr-5 rounded bg-gray-700">
+          Continue Payment
+        </button>
+      </div>
+    </div>
+
+    <!--Footer 1 Start-->
+    <div>
+      <img
+        src="/assets/images/Payment.png"
+        class="max-w-[50%] ml-[5%] mt-[5%]"
+      />
+    </div>
+    <!--Footer 1 End-->
+
+    <!--Footer Code-->
+    <div class="flex justify-around mt-10 mb-10">
+      <div class="flex-col justify-between">
+        <div class="font-light">
+          For More information or Inquiry Contact us at
+        </div>
+        <div class="font-light">uiuloananddonation@gmail.com</div>
+      </div>
+
+      <div class="flex justify-around items-center gap-5">
+        <div class="font-light">Terms and Condition</div>
+        <div class="font-light">Cookie Policy</div>
+        <div class="font-medium">Legal</div>
+
+        <div
+          class="bg-amber-500 h-10 p-4 rounded-3xl flex flex-col justify-center"
+        >
+          <button class="flex justify-evenly gap-2">
+            <div class="flex justify-center gap-1">
+              <img src="/assets/images/tick.png" class="h-5 w-5" />
+              English
+            </div>
+            <div>|</div>
+            <div>United States</div>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!--footer End here-->
   </body>
 </html>
