--- a/src/catagories.html
+++ b/src/catagories.html
@@ -10,6 +10,31 @@
   <body class="bg-gray-900 text-amber-100">
     <!--Navbar Code-->
 
+    <div
+      class="mx-auto w-screen px-20 py-6 flex justify-between items-center text-white"
+    >
+      <div class="flex items-center space-x-3">
+        <img
+          src="../assets/images/United_International_University_Monogram.svg.png"
+          alt="Logo"
+          class="h-8"
+        />
+        <span class="text-xl font-bold">UIU Help Box</span>
+      </div>
+      <nav class="space-x-6 hidden md:flex items-center">
+        <a href="#" class="hover:text-orange-400">Home</a>
+        <a href="#" class="hover:text-orange-400">Our Services</a>
+        <a href="#" class="hover:text-orange-400">About us</a>
+        <a href="#" class="hover:text-orange-400">Contact us</a>
+        <button
+          class="bg-orange-400 hover:bg-orange-700 text-white px-4 py-2 rounded-lg"
+        >
+          Get Started
+        </button>
+      </nav>
+    </div>
+    <!--Navbar Ended-->
+
     <div class="flex flex-col justify-items-start mt-[10%] w-[100%]">
       <div class="flex flex-col justify-center ml-[7%]">
         <div class="flex align-middle text-4xl font-bold">
