--- a/src/donation-description.html
+++ b/src/donation-description.html
@@ -8,6 +8,32 @@
   </head>
 
   <body class="bg-gray-900 text-amber-100">
+    <!--Navbar Start-->
+
+    <div class="px-20 py-6 flex justify-between items-center text-white">
+      <div class="flex items-center space-x-3">
+        <img
+          src="../assets/images/United_International_University_Monogram.svg.png"
+          alt="Logo"
+          class="h-8"
+        />
+        <span class="text-xl font-bold">UIU Help Box</span>
+      </div>
+      <nav class="space-x-6 hidden md:flex items-center">
+        <a href="#" class="hover:text-orange-400">Home</a>
+        <a href="#" class="hover:text-orange-400">Our Services</a>
+        <a href="#" class="hover:text-orange-400">About us</a>
+        <a href="#" class="hover:text-orange-400">Contact us</a>
+        <button
+          class="bg-orange-400 hover:bg-orange-700 text-white px-4 py-2 rounded-lg"
+        >
+          Get Started
+        </button>
+      </nav>
+    </div>
+
+    <!--Navbar End-->
+
     <div class="flex justify-normal gap-[5%]">
       <!--Left panel -->
       <div class="ml-[7%] max-w-[50%]">
