--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
           <h3 class="font-bold text-xl">Crowd Funding</h3>
           <p class="pb-6">Support, share, succeed.</p>
           <a
-            href=""
+            href="donation.html"
             class="bg-orange-400 hover:bg-orange-700 text-white px-4 py-2 rounded-lg"
             >Donate Now</a
           >
