--- a/src/catagories.html
+++ b/src/catagories.html
@@ -11,7 +11,7 @@
     <!--Navbar Code-->
 
     <div
-      class="mx-auto w-screen px-20 py-6 flex justify-between items-center text-white"
+      class="mx-auto px-20 py-6 flex justify-between items-center text-white"
     >
       <div class="flex items-center space-x-3">
         <img
@@ -22,7 +22,7 @@
         <span class="text-xl font-bold">UIU Help Box</span>
       </div>
       <nav class="space-x-6 hidden md:flex items-center">
-        <a href="#" class="hover:text-orange-400">Home</a>
+        <a href="index.html" class="hover:text-orange-400">Home</a>
         <a href="#" class="hover:text-orange-400">Our Services</a>
         <a href="#" class="hover:text-orange-400">About us</a>
         <a href="#" class="hover:text-orange-400">Contact us</a>
