--- a/src/checkout.html
+++ b/src/checkout.html
@@ -18,7 +18,7 @@
         <span class="text-xl font-bold">UIU Help Box</span>
       </div>
       <nav class="space-x-6 hidden md:flex items-center">
-        <a href="#" class="hover:text-orange-400">Home</a>
+        <a href="index.html" class="hover:text-orange-400">Home</a>
         <a href="#" class="hover:text-orange-400">Our Services</a>
         <a href="#" class="hover:text-orange-400">About us</a>
         <a href="#" class="hover:text-orange-400">Contact us</a>
